--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "angular-ng-autocomplete": "^1.1.13",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "ng-pick-datetime": "^7.0.0",
